--- a/Modeler copy 2.ipynb
+++ b/Modeler copy 2.ipynb
@@ -173,7 +173,7 @@
     "\n",
     "# اجرای اصلی\n",
     "if __name__ == \"__main__\":\n",
-    "    df = load_data('XAUUSD-VIP_M30.txt')\n",
+    "    df = load_data('XAUUSD-I_M30.txt')\n",
     "    scaler = MinMaxScaler()\n",
     "    scaled_data = scaler.fit_transform(df.values)\n",
     "    \n",
