--- a/Modeler copy.ipynb
+++ b/Modeler copy.ipynb
@@ -218,7 +218,7 @@
     "# تابع اصلی\n",
     "def main():\n",
     "    # بارگذاری و پیش‌پردازش داده\n",
-    "    df = load_and_preprocess('XAUUSD-VIP_M30.txt')\n",
+    "    df = load_and_preprocess('XAUUSD-I_M30.txt')\n",
     "    \n",
     "    # آماده‌سازی داده\n",
     "    sequences, targets, scaler = prepare_data(df)\n",
