--- a/Modeler.ipynb
+++ b/Modeler.ipynb
@@ -267,7 +267,7 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    # بارگذاری و پیش‌پردازش داده\n",
-    "    data, scaler, cols = preprocess_data('XAUUSD-VIP_M30.txt')\n",
+    "    data, scaler, cols = preprocess_data('XAUUSD-I_M30.txt')\n",
     "    if data is None:\n",
     "        exit()\n",
     "    \n",
